fix highlight on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
     font-style: normal;
 }
 
-input, textarea, button, select, a {
+input, textarea, button, select, div, span, nav, li, a {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
